$Id: ChangeLog,v 1.95 2004/08/04 22:12:07 freckle Exp $

2004-08-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * dev/unix_devs.c: CTRL-C on terminal terminates running
    unix emulation apps nows

2004-08-03  Harald Kipp  <harald.kipp@egnite.de>

	* app/basemon: Dataflash check added. Fixed a bug, which offered MAC
	address 0. This is really weird: The MAC address bug had been fixed
	by making an auto array global. There's probably something wrong
	with the stack. UART initialization is now early for easier debugging.
	In previous releases the web server didn't produce any output when
	Basemon didn't detect RS232 input. This confused users, didn't show
	the IP settings and thus had been changed. All calls to NutDelay had
	been replaced by calls of the local Delay routine. The SMSC shares
	transmit and receive buffer, which let the broadcast test fail after
	some incoming packets, which where never removed from the NIC. Now
	the receiver is disabled during broadcast test and the NIC will be
	reset if running out of buffer space. A more feasible baudrate table
	is used now, which also supports overclocked ATmegas.


2004-08-03  Harald Kipp  <harald.kipp@egnite.de>

	* conf, tools/nutconf: Lots of changes, too many to list here.
	The tool seems to become useful soon, just a few bug fixes
	away from here.


2004-08-02  Ole Reinhardt
    * include/can_dev.h dev/can_dev.c
    Changed typing of CAN_TryRxFrame. Hope this will not concern too much
    people

    * include/adc.h dev/adc.c
    Initial import of an ADC driver for ATMega128 / AVR-GCC

2004-07-30  Oliver Schulz  <olischulz@web.de>

    * include/io.h: First proposal to define some global ioctl commands.

    * crt/filelength.c:  filelength implemented for VIRTUALDEVICEs using the new 
    global ioctl command IOCTL_GETFILESIZE.
    
    * include/netinet/tcp_fsm.h: Added a comment and changed the prototype of 
    NutTcpStateRetranTimeout.
    